src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>SBQQ__SortOrder__c</fullName>
        <description>Determines a default sort order of products in the Product Lookup page, and therefore the order in which they are added to the quote.</description>
        <inlineHelpText>Determines a default sort order of products in the Product Lookup page, and therefore the order in which they are added to the quote.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Specifications__c</fullName>
        <description>Formatted specifications for this product for use in quote templates to produce spec sheets.</description>
        <inlineHelpText>Formatted specifications for this product for use in quote templates to produce spec sheets.</inlineHelpText>
        <label>Specifications</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionBase__c</fullName>
        <description>Determines whether dynamic subscriptions are calculated off List or Net product price.</description>
        <inlineHelpText>Determines whether Percent of Total is calculated off List or Net product prices.</inlineHelpText>
        <label>Percent Of Total Base</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionCategory__c</fullName>
        <description>Subscription category for this product. Applies to all products and used to limit percent of total subscriptions to certain products.</description>
        <inlineHelpText>Use this to limit percent of total calculations to certain product categories. For example, software maintenance should only calculate percentage on products with a software maintenance percent of total category.</inlineHelpText>
        <label>Percent Of Total Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionConversion__c</fullName>
        <description>Indicates how this Product is converted to Subscriptions</description>
        <inlineHelpText>Indicates how this Product is converted to Subscriptions</inlineHelpText>
        <label>Subscription Conversion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One per subscribed asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPercent__c</fullName>
        <description>Percent of non-subscription total to be used as the price of this subscription.</description>
        <inlineHelpText>Percent of non-subscription total to be used as the price of this subscription.</inlineHelpText>
        <label>Percent Of Total (%)</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionPricing__c</fullName>
        <description>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</description>
        <inlineHelpText>Type of pricing to use for this subscription. &quot;None&quot; means this product is not a subscription.</inlineHelpText>
        <label>Subscription Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Percent Of Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Effective product on which maintenance should calculate.</description>
        <inlineHelpText>Use this field to override a product that is included in a percent of total calculation. Point this lookup to a product with a list price you would like to use for the current product’s Percent of Total calculations.</inlineHelpText>
        <label>Percent Of Total Target</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Subscription Targeting Products</relationshipLabel>
        <relationshipName>SubscriptionTargetingProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionTerm__c</fullName>
        <description>Term length of this subscription. Only applicable if the product is a subscription.</description>
        <inlineHelpText>Term length of this subscription. Only applicable if the product is a subscription.</inlineHelpText>
        <label>Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Renewable Subscriptions will transfer to Renewal Quotes. One-time Subscriptions will not.</description>
        <inlineHelpText>Renewable Subscriptions will transfer to Renewal Quotes. One-time Subscriptions will not.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewable</fullName>
                    <default>true</default>
                    <label>Renewable</label>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this product is taxable.</description>
        <inlineHelpText>Indicates whether this product is taxable.</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountLevel__c</fullName>
        <description>Level of subscription term that&apos;s used to calculated term discount.</description>
        <inlineHelpText>Specify subscription term level that should be used in calculating term discount. Leave blank to indicate default.</inlineHelpText>
        <label>Term Discount Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term.</description>
        <inlineHelpText>Schedule for discounts based on subscription term.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SBQQ__DiscountSchedule__c.SBQQ__UserDefined__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Term Discounted Products</relationshipLabel>
        <relationshipName>TermDiscountedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeCredit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credit product quoted when upgrading this product.</description>
        <inlineHelpText>Use to specify credit when quoting upgrades to this product.</inlineHelpText>
        <label>Upgrade Credit</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Credited Products</relationshipLabel>
        <relationshipName>CreditedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeRatio__c</fullName>
        <description>The conversion rate between this upgrade product and its source product.</description>
        <inlineHelpText>The conversion rate between this product&apos;s quantity and that of its source product.</inlineHelpText>
        <label>Upgrade Ratio</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the product being upgraded.</description>
        <inlineHelpText>Product being upgraded. Populating this field makes this product an upgrade.</inlineHelpText>
        <label>Upgrade Source</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Target Upgrades</relationshipLabel>
        <relationshipName>TargetUpgrades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradeTarget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product being upgraded to.</description>
        <inlineHelpText>Specify the upgraded product. Only applicable if this product is an upgrade as indicated by Upgrade Source field being populated or having related Upgrade Source records.</inlineHelpText>
        <label>Upgrade Target</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Source Upgrades</relationshipLabel>
        <relationshipName>SourceUpgrades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SKU_Type__c</fullName>
        <formula>IF(Product_Category__c=&quot;Other&quot;,&quot;Other&quot;, 
IF(CONTAINS(LOWER(Name),&quot;perpetual&quot;),&quot;Perm&quot;, 
IF(CONTAINS(Name,&quot;Term&quot;),&quot;Term&quot;, 
IF(CONTAINS(LOWER(Name),&quot;support &amp; maintenance&quot;),&quot;Maintenance&quot;, 
IF(CONTAINS(Name,&quot;Training&quot;),&quot;Training&quot;, 
IF(CONTAINS(LOWER(Name),&quot;rapid success&quot;),&quot;Services&quot;, 
&quot;Other&quot;))))))</formula>
        <label>SKU Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Type_by_Prod_Code__c</fullName>
        <formula>IF(CONTAINS(ProductCode,&quot;TERM&quot;),&quot;Term&quot;,
IF(CONTAINS(ProductCode,&quot;PERM&quot;),&quot;Perm&quot;,
IF(CONTAINS(ProductCode,&quot;PSO&quot;),&quot;Training&quot;,
IF(CONTAINS(ProductCode,&quot;CISCO-TL&quot;),&quot;Term&quot;,
IF(CONTAINS(ProductCode,&quot;SNM&quot;),&quot;Maintenance&quot;,&quot;Other&quot;)))))</formula>
        <label>SKU Type (by Prod Code)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>Product term in months</description>
        <inlineHelpText>Product term in months</inlineHelpText>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Support_and_Maintenance</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Term__c</columns>
        <columns>Pricing_Type__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
            <operation>contains</operation>
            <value>SNM</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Support and Maintenance</label>
        <sharedTo>
            <role>VMT_SF_admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2015_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>12/4/2014 12:00 AM</value>
        </filters>
        <label>2015 Products</label>
        <sharedTo>
            <role>CFO</role>
            <role>VMT_SF_admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>mid_2016_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>8/10/2016 12:00 AM</value>
        </filters>
        <label>mid 2016 Products</label>
        <sharedTo>
            <role>CFO</role>
            <role>VMT_SF_admin</role>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SBQQ__Include_or_Exclude_Maintenance</fullName>
        <active>true</active>
        <description>Validates that either Includes In Maintenance or Excludes From Maintenance checkbox is checked but not both.</description>
        <errorConditionFormula>AND(SBQQ__IncludeInMaintenance__c,SBQQ__ExcludeFromMaintenance__c)</errorConditionFormula>
        <errorMessage>You must check either Include In Maintenance or Exclude From Maintenance checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Subscription_Conversion_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(SBQQ__SubscriptionConversion__c, &apos;One per subscribed asset&apos;) &amp;&amp; NOT(ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;Percent Of Total&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__SubscriptionConversion__c</errorDisplayField>
        <errorMessage>You can only select One per Subscribed Asset for Subscription Conversion for Percent of Total Subscriptions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Term_schedule_requires_subscription</fullName>
        <active>true</active>
        <description>Ensures only subscription products have Term Discount Schedule field populated.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__SubscriptionPricing__c, &apos;&apos;),NOT(ISBLANK(SBQQ__TermDiscountSchedule__c)))</errorConditionFormula>
        <errorDisplayField>SBQQ__TermDiscountSchedule__c</errorDisplayField>
        <errorMessage>Only subscription products may specify term discount schedule</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is selected as One-Time, Billing Frequency must not be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR( 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))), 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
</CustomObject>